# JetECU-Core

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
config/: default.json
core/: ecu_config.c  ecu_config.h  ecu_config_load.c  ecu_config_load.h  ecu_core.c  ecu_core.h  ecu_fault.c  ecu_fault.h  ecu_fuel.c  ecu_fuel.h  ecu_json.c  ecu_json.h  ecu_map.c  ecu_map.h  ecu_maps_default.h  ecu_pid.c  ecu_pid.h  ecu_scheduler.c  ecu_scheduler.h  ecu_sensor.c  ecu_sensor.h  ecu_sm.c  ecu_sm.h  ecu_types.h
cpp/jetecu/: Config.cpp  Config.h  Engine.cpp  Engine.h  FaultManager.cpp  FaultManager.h  Fuel.cpp  Fuel.h  Map.cpp  Map.h  Pid.cpp  Pid.h  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  StateMachine.cpp  StateMachine.h  Telemetry.cpp  Telemetry.h  Types.h
doc/: Doxyfile.in  Makefile  conf.py  index.rst  requirements.txt
doc/_static/: custom.css
doc/_templates/: versions.html
doc/api/: config.rst  core.rst  cpp.rst  fault.rst  fuel.rst  index.rst  map.rst  pid.rst  scheduler.rst  sensor.rst  state_machine.rst  telemetry.rst
doc/architecture/: index.rst  overview.rst  state_machine.rst
doc/configuration/: index.rst
doc/contributing/: index.rst
doc/fault_handling/: catalogue.rst  index.rst
doc/getting_started/: building.rst  index.rst  simulator.rst  testing.rst
docs/: architecture.md  fault_catalogue.md  state_machine.md
hal/: hal_adc.h  hal_can.h  hal_gpio.h  hal_nvram.h  hal_pwm.h  hal_system.h  hal_timer.h  hal_uart.h  hal_watchdog.h
platform/esp32/: CMakeLists.txt  hal_adc_esp32.c  hal_gpio_esp32.c  hal_nvram_esp32.c  hal_pwm_esp32.c  hal_system_esp32.c  hal_timer_esp32.c  hal_uart_esp32.c  hal_watchdog_esp32.c  main.c
platform/posix/: hal_adc_posix.c  hal_can_posix.c  hal_gpio_posix.c  hal_nvram_posix.c  hal_pwm_posix.c  hal_system_posix.c  hal_timer_posix.c  hal_uart_posix.c  hal_watchdog_posix.c
platform/stm32/: hal_adc_stm32.c  hal_can_stm32.c  hal_gpio_stm32.c  hal_nvram_stm32.c  hal_pwm_stm32.c  hal_system_stm32.c  hal_timer_stm32.c  hal_uart_stm32.c  hal_watchdog_stm32.c  main_stm32.c  stm32_hal_conf.h
sim/: sim_engine.c  sim_engine.h  sim_main.c  sim_replay.c  sim_replay.h
telemetry/: tel_frame.c  tel_frame.h  tel_protocol.h  tel_send.c  tel_send.h
test/: test_config.c  test_config.cpp  test_core.c  test_core.cpp  test_fault.c  test_fault.cpp  test_fuel.c  test_fuel.cpp  test_fuzz.c  test_fuzz.cpp  test_map.c  test_map.cpp  test_perf.c  test_perf.cpp  test_pid.c  test_pid.cpp  test_runner.h  test_scheduler.c  test_scheduler.cpp  test_sensor.c  test_sensor.cpp  test_sm.c  test_sm.cpp  test_telemetry.c  test_telemetry.cpp
test/data/: start_sequence.csv
